--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=password-generator-api
 server.port=8080
 server.servlet.context-path=/
+
+# Actuator Endpoints
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
